编辑个人资料v1
编辑个人资料v1

--- a/app.wxss
+++ b/app.wxss
@@ -1,10 +1,13 @@
-/**app.wxss**/
-.container {
+page{
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  padding: 200rpx 0;
-  box-sizing: border-box;
-} 
+  font-size: 26rpx;
+  background-color: #f4f4f4;
+  font-family: "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+  font-family: "Microsoft YaHei";
+}
+input{
+  font-family: "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+}
+.mt20{
+  margin-top: 20rpx;
+}
