--- a/pages/workExper/workExper.wxss
+++ b/pages/workExper/workExper.wxss
@@ -24,6 +24,15 @@
   height: 90rpx;
   padding: 0 10rpx;
 }
+.mod2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 90rpx;
+  padding: 0 0rpx;
+  margin-left: -5rpx;
+}
 
 .arrow-r {
   width: 30rpx;
@@ -129,4 +138,9 @@
 
 .create .disabled {
   opacity: 0.4;
+}
+
+.long-btn{
+  width: 92%;
+  margin-top: 20rpx;
 }
