专业技能模块
专业技能模块

--- a/pages/educateCerti/educateCerti.wxml
+++ b/pages/educateCerti/educateCerti.wxml
@@ -2,14 +2,14 @@
   <!-- 学校 -->
   <view class="mod-a">
     <view class="mod t-name">
-      <text class="key">学校</text>
+      <text class="key">毕业学校</text>
       <input bindinput="bindSchool" class="input" maxlength="100" placeholder="" />
     </view>
   </view>
   <!-- 学历 -->
   <view class="mod-a">
     <view class="mod t-name">
-      <text class="key">学历</text>
+      <text class="key">最高学历</text>
       <picker bindchange="bindEducation" value="{{index}}" range="{{educations}}">
         <view class="picker">
           {{educations[index]}}
