--- a/pages/jobRequire/jobRequire.wxss
+++ b/pages/jobRequire/jobRequire.wxss
@@ -35,4 +35,11 @@
 .long-btn{
   width: 92%;
   margin-top: 20rpx;
+  background-color:#4cabaf;
+  color:#fff;
+}
+
+.date {
+  padding-left: 10rpx;
+  color: #4cabaf;
 }
