--- a/pages/workExper/workExper.wxss
+++ b/pages/workExper/workExper.wxss
@@ -92,7 +92,7 @@
   flex-direction: row;
   align-items: center;
   padding-left: 10rpx;
-  color: #2fcc85;
+  color: #4cabaf;
 }
 
 .week {
@@ -143,10 +143,11 @@
 .long-btn{
   width: 92%;
   margin-top: 20rpx;
+  background-color:#4cabaf;
+  color:#fff;
 }
 
 .t-add{
-    color: #2fcc85;
-      font-size: 32rpx;
-
+  color: #4cabaf;
+  font-size: 32rpx;
 }
